# occurances

./: Cargo.toml
src/: cli.rs  lib.rs  main.rs  occu_core.rs  shell.rs  tui.rs
src/shell/: mod.rs
