[package]
name = "occurances_app"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
ordermap = { version = "0.5.7", features = ["serde"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
uuid = { version = "1.17.0", features = ["v7"] }
