[package]
name = "occurances_app"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
ordermap = { version = "0.5.7", features = ["serde"] }
ratatui = { version = "0.29.0", features = ["document-features", "widget-calendar", "all-widgets"] }
color-eyre = "0.6"

serde = { version = "1.0.219", features = ["serde_derive"] }
serde_yaml = "0.9.34"
uuid = { version = "1.17.0", features = ["v7"] }
